fix(ResponsiveStyles): adjust media query breakpoints and alignment for mobile layout

--- a/apps/web-frontend/src/app/_components/old-page-section-tracker.module.css
+++ b/apps/web-frontend/src/app/_components/old-page-section-tracker.module.css
@@ -20,13 +20,13 @@
   /* color: var(--gray-800); */
 }
 
-@media (max-width: 32em) {
+/* 670px */
+@media (max-width: 41.875em) {
   .menuContainer {
     padding-inline: 0;
   }
   .menuIcon {
-    width: 3.6rem;
-    margin-left: 2rem;
+    width: 3rem;
   }
   .menuLabel {
     display: none;
